fixes button style and layout bug

--- a/static/scss/generalStyles.scss
+++ b/static/scss/generalStyles.scss
@@ -45,6 +45,8 @@ button {
 
 .mdc-button--raised {
   background: $lightgray-bg;
+  box-shadow: none;
+  font-size: 13px;
 }
 
 .hidden {
